# Kuri_Assistant

./: .gitignore  CMakeLists.txt  Kuri_Assistant.sln  README.md
Kuri_Assistant/: ACore.cpp  ACore.h  Computer.h  Dictionary.cpp  Dictionary.h  Kuri_Assistant.cpp  Kuri_Assistant.h  Kuri_Assistant.vcxproj  Kuri_Assistant.vcxproj.filters  Ultility.cpp  Ultility.h  main.cpp
